correctly aligning social media icons

--- a/styles/artworks.css
+++ b/styles/artworks.css
@@ -400,6 +400,8 @@ label input[type="radio"]:checked ~ span {
 
 .icon-max-width {
     max-width: 20px;
+    display: block;
+    margin: auto
 }
 
 .hide {
